# tracer

./: .gitignore  PLAN.md  PRD.md  README.md  TECHNICAL_DESIGN.md  pyproject.toml  test_26b.py  test_debug.py  test_debug2.py  test_final.py  test_oracle.py  test_prompts.py  test_quick.py  test_robust.py  test_strip.py  test_strip2.py
output/: dashboard.html
scripts/: README.md  test_4frames.py  test_debug3.py  test_direct.py  test_find.py  test_focused.py  test_full_pipeline.py  test_raw.py
src/tracer/: __init__.py  auditor.py  cli.py  config.py  crop.py  pipeline.py  qoe.py  report.py  schemas.py  scout.py  video.py
src/tracer/models/: __init__.py  mlx_backend.py
src/tracer/templates/: audit_report.md
tests/: test_basic.py
